IDSDEV-639 : MIG Product localization to support Brazilian Portuguese

--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
@@ -36,3 +36,5 @@ select.tenant.dropdown.display.name=Select Tenant
 super.tenant.display.name=Super Tenant
 super.tenant=carbon.super
 domain.unknown=domain.unknown
+error-message=Authentication Error
+error-description=Something went wrong during the authentication process. Please try signing in again.
