--- a/components/authentication-endpoint/src/main/webapp/mcx-user-registration/languages/de.json
+++ b/components/authentication-endpoint/src/main/webapp/mcx-user-registration/languages/de.json
@@ -42,6 +42,7 @@
 	"locale-de": "Deutsche",
 	"locale-en": "English (UK)",
 	"locale-th": "Thai",
+	"misc-submit-button": "Einreichen",
 	"misc-cancel-button": "Abbrechen",
 	"misc-continue-button": "Weiter",
 	"misc-no-thanks-button": "Nein Danke",
