--- a/components/authentication-endpoint/src/main/webapp/mcx-user-registration/languages/en.json
+++ b/components/authentication-endpoint/src/main/webapp/mcx-user-registration/languages/en.json
@@ -42,6 +42,7 @@
 	"locale-de": "German",
 	"locale-en": "English (UK)",
 	"locale-th": "Thai",
+	"misc-submit-button": "Submit",
 	"misc-cancel-button": "Cancel",
 	"misc-continue-button": "Continue",
 	"misc-no-thanks-button": "No thanks",
@@ -147,6 +148,11 @@
 	"continue-on-device-heading": "We’ve sent a message to your mobile",
 	"continue-on-device-intro": "Sometimes when using Mobile Connect, you’ll need to enter a PIN for extra security. Please follow the instructions on your mobile to create a PIN.",
 	"continue-on-device-intro-sms": "Click on the link in SMS from Mobile Connect to complete login.",
+	"continue-on-device-intro-otp-sms": "Click on the link in SMS from Mobile Connect to complete login, Or Enter the OTP sent via SMS",
+	"continue-on-device-otp-invalid": "Please provide a valid OTP",
+	"continue-on-device-otp-mismatch": "OTP is incorrect",
+	"continue-on-device-otp-error-process": "Error while processing OTP",
+	"continue-on-device-otp-prompt":"Enter OTP Here",
 	"continue-on-device-intro-ussd": "Reply with 1 to continue with your Login.",
 	"continue-on-device-intro-ussd-pin": "Please enter your 4-digit Mobile Connect PIN to continue with your Login.",
 	"continue-on-device-intro-default": "Reply to the message from Mobile Connect to complete login.",
