--- a/components/authentication-endpoint/src/main/webapp/mcx-user-registration/languages/th.json
+++ b/components/authentication-endpoint/src/main/webapp/mcx-user-registration/languages/th.json
@@ -42,6 +42,7 @@
 	"locale-de": "เยอรมัน",
 	"locale-en": "ภาษาอังกฤษ (UK)",
 	"locale-th": "ภาษาไทย",
+	"misc-submit-button": "เสนอ",
 	"misc-cancel-button": "ยกเลิก",
 	"misc-continue-button": "ดำเนินการต่อ",
 	"misc-no-thanks-button": "ยกเลิก",
