--- a/components/org.wso2.carbon.identity.application.authentication.endpoint.withsp/4.2.2/src/main/webapp/languages/de.json
+++ b/components/org.wso2.carbon.identity.application.authentication.endpoint.withsp/4.2.2/src/main/webapp/languages/de.json
@@ -42,6 +42,7 @@
 	"locale-de": "Deutsche",
 	"locale-en": "English (UK)",
 	"locale-th": "Thai",
+	"misc-submit-button": "Einreichen",
 	"misc-cancel-button": "Abbrechen",
 	"misc-continue-button": "Weiter",
 	"misc-no-thanks-button": "Nein Danke",
