--- a/components/org.wso2.carbon.identity.application.authentication.endpoint.withsp/4.2.2/src/main/webapp/languages/th.json
+++ b/components/org.wso2.carbon.identity.application.authentication.endpoint.withsp/4.2.2/src/main/webapp/languages/th.json
@@ -42,6 +42,7 @@
 	"locale-de": "เยอรมัน",
 	"locale-en": "ภาษาอังกฤษ (UK)",
 	"locale-th": "ภาษาไทย",
+	"misc-submit-button": "เสนอ",
 	"misc-cancel-button": "ยกเลิก",
 	"misc-continue-button": "ดำเนินการต่อ",
 	"misc-no-thanks-button": "ยกเลิก",
