IDSDEV-660 | IDSDEV-661 | IDSDEV-673 | IDSDEV-665

--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
@@ -43,6 +43,8 @@ common-error-description=Something went wrong during the authentication process.
 common-button-misc-no-thanks=No thanks
 common-button-misc-yes=Yes
 common-button-misc-cancel=Cancel
+common-button-misc-submit=Submit
+
 
 common-label-misc-learn-more=Learn more
 common-label-account-setup-privacy-policy=The %s Mobile Connect Privacy Promise %s means that your mobile number won't be shared and no personal information will be disclosed without your consent. See our full privacy policy here
@@ -50,6 +52,9 @@ common-label-account-setup-privacy-policy-link-pph=privacy policy here
 common-label-security-heading=Now, let’s make your account secure
 common-label-security-intro=Create a PIN for secure log-in and two questions we can ask you in case you ever forget your PIN.
 common-label-security-terms-policy=By setting up an account, you are agreeing to the %sTerms and Conditions%s.
+common-label-security-terms-conditions=Terms and Conditions
+common-label-security-privacy-promise=Privacy Promise
+common-label-security-privacy-policy=Privacy Policy
 common-label-security-question-1=Choose a security question
 common-label-security-question-2=Choose a second question 
 common-label-security-question-option-blank=Choose a question
@@ -88,7 +93,11 @@ sms-label-authenticator-success=You are successfully authenticated via mobile co
 ####waiting.jsp
 waiting-label-continue-on-device-heading=We’ve sent a message to your mobile
 waiting-label-continue-on-device-intro-sms=Click on the link in SMS from Mobile Connect to complete login.
-
+waiting-label-continue-on-device-intro-otp-sms=Click on the link in SMS from Mobile Connect to complete login, Or Enter the OTP sent via SMS
+waiting-label-continue-on-device-otp-invalid=Please provide a valid OTP
+waiting-label-continue-on-device-otp-mismatch=OTP is incorrect
+waiting-label-continue-on-device-otp-error-process=Error while processing OTP
+waiting-label-continue-on-device-otp-prompt=Enter OTP Here
 
 
 
