--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
@@ -2,15 +2,19 @@ common-error-message=Erro de autentica\u00e7\u00e3o
 common-error-description=O processo de autentica\u00e7\u00e3o n\u00e3o pode ser completado. Por favor, tente novamente.
 
 common-button-misc-no-thanks=N\u00e3o, obrigado
-common-button-misc-yes=Yes
+common-button-misc-yes=Sim
 common-button-misc-cancel=Cancelar
+common-button-misc-submit=Enviar
 
 common-label-misc-learn-more=Saiba mais
-common-label-account-setup-privacy-policy=Nenhuma informa\u00e7\u00e3o ser\u00e1 compartilhada sem o seu consentimento. Veja nosso
+common-label-account-setup-privacy-policy=%sA pol\u00edtica de privacidade do Mobile Connect %s garante que seu n\u00famero de celular e informa\u00e7\u00f5es pessoais n\u00e3o ser\u00e3o compartilhadas sem o seu consentimento. Veja nossa pol\u00edtica de privacidade aqui.
 common-label-account-setup-privacy-policy-link-pph=pol\u00edtica de privacidade aqui
 common-label-security-heading=Agora, vamos deixar a sua conta segura
 common-label-security-intro=Criar um c\u00f3digo para login seguro e duas perguntas que podemos solicitar no caso de voc\u00ea esquecer o seu c\u00f3digo.
-common-label-security-terms-policy=Ao criar uma conta, voc\u00ea concorda com os termos e condi\u00e7\u00f5es de uso.
+common-label-security-terms-policy=Ao criar uma conta, voc\u00ea concorda com os %s Termos e Condi\u00e7\u00f5es %s de uso.
+common-label-security-terms-conditions=Termos e Condi\u00e7\u00f5es
+common-label-security-privacy-promise=Promessa de Privacidade
+common-label-security-privacy-policy=Pol\u00edtica de Privacidade
 common-label-security-question-1=Escolha uma pergunta secreta
 common-label-security-question-2=Escolha a segunda pergunta
 common-label-security-question-option-blank=Escolha uma pergunta
@@ -19,7 +23,7 @@ common-label-security-question-option-vacation=Qual a cidade que voc\u00ea foi e
 common-label-security-question-option-father=Qual o nome do meio do seu pai?
 common-label-security-question-option-food=Qual a sua comida favorita?
 common-label-security-answer-1=Informe a resposta para sua pergunta aqui
-common-label-security-answer-2=Type the answer to your second question here
+common-label-security-answer-2=Informe a resposta para sua segunda pergunta aqui
 common-label-security-question-option-sport=Qual o seu esporte favorito?
 common-label-security-question-option-hospital=Qual o nome do hospital que voc\u00ea nasceu? 
 common-label-security-question-option-pet=Qual o nome do seu primeiro animal de estima\u00e7\u00e3o? 
@@ -49,5 +53,8 @@ sms-label-authenticator-success=Voc\u00ea foi autenticado com sucesso pelo Mobil
 ####waiting.jsp
 waiting-label-continue-on-device-heading=Enviamos uma mensagem para seu celular.
 waiting-label-continue-on-device-intro-sms=Clique no link enviado por SMS para completar o login.
-
-
+waiting-label-continue-on-device-intro-otp-sms=Clique no link enviado por SMS para completar o login, Ou Informe o c\u00f3digo enviado por SMS
+waiting-label-continue-on-device-otp-invalid=Por favor, informe um o c\u00f3digo v\u00e1lido
+waiting-label-continue-on-device-otp-mismatch=O c\u00f3digo est\u00e1 incorreto
+waiting-label-continue-on-device-otp-error-process=Erro ao processar o c\u00f3digo
+waiting-label-continue-on-device-otp-prompt=Informe o c\u00f3digo aqui
