--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
@@ -2,15 +2,19 @@ common-error-message=Erro de autenticação
 common-error-description=O processo de autenticação não pode ser completado. Por favor, tente novamente.
 
 common-button-misc-no-thanks=Não, obrigado
-common-button-misc-yes=Yes
+common-button-misc-yes=Sim
 common-button-misc-cancel=Cancelar
+common-button-misc-submit=Enviar
 
 common-label-misc-learn-more=Saiba mais
-common-label-account-setup-privacy-policy=Nenhuma informação será compartilhada sem o seu consentimento. Veja nosso
+common-label-account-setup-privacy-policy=%sA política de privacidade do Mobile Connect %s garante que seu número de celular e informações pessoais não serão compartilhadas sem o seu consentimento. Veja nossa política de privacidade aqui.
 common-label-account-setup-privacy-policy-link-pph=política de privacidade aqui
 common-label-security-heading=Agora, vamos deixar a sua conta segura
 common-label-security-intro=Criar um código para login seguro e duas perguntas que podemos solicitar no caso de você esquecer o seu código.
-common-label-security-terms-policy=Ao criar uma conta, você concorda com os termos e condições de uso.
+common-label-security-terms-policy=Ao criar uma conta, você concorda com os %s Termos e Condições %s de uso.
+common-label-security-terms-conditions=Termos e Condições
+common-label-security-privacy-promise=Promessa de Privacidade
+common-label-security-privacy-policy=Política de Privacidade
 common-label-security-question-1=Escolha uma pergunta secreta
 common-label-security-question-2=Escolha a segunda pergunta
 common-label-security-question-option-blank=Escolha uma pergunta
@@ -19,7 +23,7 @@ common-label-security-question-option-vacation=Qual a cidade que você foi em su
 common-label-security-question-option-father=Qual o nome do meio do seu pai?
 common-label-security-question-option-food=Qual a sua comida favorita?
 common-label-security-answer-1=Informe a resposta para sua pergunta aqui
-common-label-security-answer-2=Type the answer to your second question here
+common-label-security-answer-2=Informe a resposta para sua segunda pergunta aqui
 common-label-security-question-option-sport=Qual o seu esporte favorito?
 common-label-security-question-option-hospital=Qual o nome do hospital que você nasceu? 
 common-label-security-question-option-pet=Qual o nome do seu primeiro animal de estimação? 
@@ -49,5 +53,8 @@ sms-label-authenticator-success=Você foi autenticado com sucesso pelo Mobile Co
 ####waiting.jsp
 waiting-label-continue-on-device-heading=Enviamos uma mensagem para seu celular.
 waiting-label-continue-on-device-intro-sms=Clique no link enviado por SMS para completar o login.
-
-
+waiting-label-continue-on-device-intro-otp-sms=Clique no link enviado por SMS para completar o login, Ou Informe o código enviado por SMS
+waiting-label-continue-on-device-otp-invalid=Por favor, informe um o código válido
+waiting-label-continue-on-device-otp-mismatch=O código está incorreto
+waiting-label-continue-on-device-otp-error-process=Erro ao processar o código
+waiting-label-continue-on-device-otp-prompt=Informe o código aqui
