--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_plaintext.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_plaintext.properties
@@ -49,7 +49,7 @@ common-button-misc-submit=Submit
 common-label-misc-learn-more=Learn more
 common-label-account-setup-privacy-policy=The %s Mobile Connect Privacy Promise %s means that your mobile number won't be shared and no personal information will be disclosed without your consent. See our full privacy policy here
 common-label-account-setup-privacy-policy-link-pph=privacy policy here
-common-label-security-heading=Now, let\u2019s make your account secure
+common-label-security-heading=Now, let’s make your account secure
 common-label-security-intro=Create a PIN for secure log-in and two questions we can ask you in case you ever forget your PIN.
 common-label-security-terms-policy=By setting up an account, you are agreeing to the %sTerms and Conditions%s.
 common-label-security-terms-conditions=Terms and Conditions
@@ -91,7 +91,7 @@ sms-label-authenticator-fail=Your session expired.
 sms-label-authenticator-success=You are successfully authenticated via mobile connect.
 
 ####waiting.jsp
-waiting-label-continue-on-device-heading=We\u2019ve sent a message to your mobile
+waiting-label-continue-on-device-heading=We’ve sent a message to your mobile
 waiting-label-continue-on-device-intro-sms=Click on the link in SMS from Mobile Connect to complete login.
 waiting-label-continue-on-device-intro-otp-sms=Click on the link in SMS from Mobile Connect to complete login, Or Enter the OTP sent via SMS
 waiting-label-continue-on-device-otp-invalid=Please provide a valid OTP
