IDSDEV-639 : Fix for error page & MC logo link bug due to property read change

--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
@@ -39,6 +39,7 @@ domain.unknown=domain.unknown
 
 common-error-message=Authentication Error
 common-error-description=Something went wrong during the authentication process. Please try signing in again.
+common-error-propmt=Attention:
 
 common-button-misc-no-thanks=No thanks
 common-button-misc-yes=Yes
