--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
@@ -1,5 +1,6 @@
 common-error-message=Erro de autentica\u00e7\u00e3o
 common-error-description=O processo de autentica\u00e7\u00e3o n\u00e3o pode ser completado. Por favor, tente novamente.
+common-error-propmt=Aten\u00e7\u00e3o:
 
 common-button-misc-no-thanks=N\u00e3o, obrigado
 common-button-misc-yes=Sim
