--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
@@ -1,5 +1,6 @@
 common-error-message=Erro de autenticação
 common-error-description=O processo de autenticação não pode ser completado. Por favor, tente novamente.
+common-error-propmt=Atenção:
 
 common-button-misc-no-thanks=Não, obrigado
 common-button-misc-yes=Sim
