[DSABRT-34 & DSABRT-31] Fixes for tickets

--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
@@ -59,3 +59,6 @@ waiting-label-continue-on-device-otp-invalid=Por favor, informe um o código vá
 waiting-label-continue-on-device-otp-mismatch=O código está incorreto
 waiting-label-continue-on-device-otp-error-process=Erro ao processar o código
 waiting-label-continue-on-device-otp-prompt=Informe o código aqui
+waiting-label-continue-on-device-success-before-timeout-phase1=Caso a transa\u00e7\u00e3o n\u00e3o for conclu\u00edda em at\u00e9&nbsp
+waiting-label-continue-on-device-success-before-timeout-phase2=&nbsp;minutos,
+waiting-label-continue-on-device-success-before-timeout-phase3=o processo ser\u00e1 automaticamente cancelado.
