--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
@@ -59,6 +59,5 @@ waiting-label-continue-on-device-otp-invalid=Por favor, informe um o c\u00f3digo
 waiting-label-continue-on-device-otp-mismatch=O c\u00f3digo est\u00e1 incorreto
 waiting-label-continue-on-device-otp-error-process=Erro ao processar o c\u00f3digo
 waiting-label-continue-on-device-otp-prompt=Informe o c\u00f3digo aqui
-waiting-label-continue-on-device-success-before-timeout-phase1=Caso a transa\u00e7\u00e3o n\u00e3o for conclu\u00edda em at\u00e9&nbsp
-waiting-label-continue-on-device-success-before-timeout-phase2=&nbsp;minutos,
-waiting-label-continue-on-device-success-before-timeout-phase3=o processo ser\u00e1 automaticamente cancelado.
+waiting-label-continue-on-device-success-before-timeout-phase1=Caso a transa\u00e7\u00e3o n\u00e3o for conclu\u00edda em at\u00e9 2 minutos,&nbsp
+waiting-label-continue-on-device-success-before-timeout-phase2=o processo ser\u00e1 automaticamente cancelado.
