Fix for [DSABRT-42] text modification

--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
@@ -42,7 +42,7 @@ register-label-prompt-heading-1=Seguro
 register-label-prompt-heading-2=Confidencial
 register-label-prompt-heading-3=Simples
 register-label-prompt-intro-1=Uma maneira mais segura de fazer o login.
-register-label-prompt-intro-2=Suas informa\u00e7\u00f5es pessoais nunca s\u00e3o compartilhadas sem a sua autoriza\u00e7\u00e3o.
+register-label-prompt-intro-2=Suas informa\u00e7\u00f5es pessoais n\u00e3o ser\u00e3o compartilhadas sem a sua autoriza\u00e7\u00e3o.
 register-label-prompt-intro-3=Sem a necessidade de m\u00faltiplos usu\u00e1rios e senhas.
 register-label-prompt-request=Parece que voc\u00ea ainda n\u00e3o tem uma conta. Gostaria de criar? \u00c9 f\u00e1cil e r\u00e1pido.
 
