--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
@@ -42,7 +42,7 @@ register-label-prompt-heading-1=Seguro
 register-label-prompt-heading-2=Confidencial
 register-label-prompt-heading-3=Simples
 register-label-prompt-intro-1=Uma maneira mais segura de fazer o login.
-register-label-prompt-intro-2=Suas informações pessoais nunca são compartilhadas sem a sua autorização.
+register-label-prompt-intro-2=Suas informações pessoais não serão compartilhadas sem a sua autorização.
 register-label-prompt-intro-3=Sem a necessidade de múltiplos usuários e senhas.
 register-label-prompt-request=Parece que você ainda não tem uma conta. Gostaria de criar? É fácil e rápido.
 
@@ -59,5 +59,5 @@ waiting-label-continue-on-device-otp-invalid=Por favor, informe um o código vá
 waiting-label-continue-on-device-otp-mismatch=O código está incorreto
 waiting-label-continue-on-device-otp-error-process=Erro ao processar o código
 waiting-label-continue-on-device-otp-prompt=Informe o código aqui
-waiting-label-continue-on-device-success-before-timeout-phase1=Caso a transa\u00e7\u00e3o n\u00e3o for conclu\u00edda em at\u00e9 2 minutos,&nbsp
-waiting-label-continue-on-device-success-before-timeout-phase2=o processo ser\u00e1 automaticamente cancelado.
+waiting-label-continue-on-device-success-before-timeout-phase1=Caso a transação não for concluída em até 2 minutos,&nbsp
+waiting-label-continue-on-device-success-before-timeout-phase2=o processo será automaticamente cancelado.
