--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_plaintext.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_plaintext.properties
@@ -94,7 +94,7 @@ sms-label-authenticator-success=You are successfully authenticated via mobile co
 ####waiting.jsp
 waiting-label-continue-on-device-heading=We’ve sent a message to your mobile
 waiting-label-continue-on-device-intro-sms=Click on the link in SMS from Mobile Connect to complete login.
-waiting-label-continue-on-device-intro-otp-sms=Click on the link in SMS from Mobile Connect to complete login, Or Enter the OTP sent via SMS
+waiting-label-continue-on-device-intro-otp-sms=Click on the link in SMS from Mobile Connect to complete login, or Enter the OTP sent via SMS
 waiting-label-continue-on-device-otp-invalid=Please provide a valid OTP
 waiting-label-continue-on-device-otp-mismatch=OTP is incorrect
 waiting-label-continue-on-device-otp-error-process=Error while processing OTP
