Fix for [DSABRT-42] text modification

--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
@@ -54,7 +54,7 @@ sms-label-authenticator-success=Voc\u00ea foi autenticado com sucesso pelo Mobil
 ####waiting.jsp
 waiting-label-continue-on-device-heading=Enviamos uma mensagem para seu celular.
 waiting-label-continue-on-device-intro-sms=Clique no link enviado por SMS para completar o login.
-waiting-label-continue-on-device-intro-otp-sms=Clique no link enviado por SMS para completar o login, Ou Informe o código enviado por SMS
+waiting-label-continue-on-device-intro-otp-sms=Clique no link enviado por SMS para completar o login, ou Informe o código enviado por SMS
 waiting-label-continue-on-device-otp-invalid=Por favor, informe um o código válido
 waiting-label-continue-on-device-otp-mismatch=O código está incorreto
 waiting-label-continue-on-device-otp-error-process=Erro ao processar o código
