--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR.properties
@@ -53,8 +53,10 @@ sms-label-authenticator-success=Voc\u00ea foi autenticado com sucesso pelo Mobil
 
 ####waiting.jsp
 waiting-label-continue-on-device-heading=Enviamos uma mensagem para seu celular.
+waiting-label-continue-on-saa_device=Enviamos uma notifica\u00e7\u00e3o para o seu celular.
 waiting-label-continue-on-device-intro-sms=Clique no link enviado por SMS para completar o login.
 waiting-label-continue-on-device-intro-otp-sms=Clique no link enviado por SMS para completar o login, ou Informe o c\u00f3digo enviado por SMS
+waiting-label-continue-on-device-intro-saa=Autentique-se do seu celular
 waiting-label-continue-on-device-otp-invalid=Por favor, informe um o c\u00f3digo v\u00e1lido
 waiting-label-continue-on-device-otp-mismatch=O c\u00f3digo est\u00e1 incorreto
 waiting-label-continue-on-device-otp-error-process=Erro ao processar o c\u00f3digo
