--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_pt_BR_plaintext.properties
@@ -53,8 +53,10 @@ sms-label-authenticator-success=Voc\u00ea foi autenticado com sucesso pelo Mobil
 
 ####waiting.jsp
 waiting-label-continue-on-device-heading=Enviamos uma mensagem para seu celular.
+waiting-label-continue-on-saa_device=Enviamos uma notifica\u00e7\u00e3o para o seu celular.
 waiting-label-continue-on-device-intro-sms=Clique no link enviado por SMS para completar o login.
 waiting-label-continue-on-device-intro-otp-sms=Clique no link enviado por SMS para completar o login, Ou Informe o código enviado por SMS
+waiting-label-continue-on-device-intro-saa=Autentique-se do seu celular
 waiting-label-continue-on-device-otp-invalid=Por favor, informe um o código válido
 waiting-label-continue-on-device-otp-mismatch=O código está incorreto
 waiting-label-continue-on-device-otp-error-process=Erro ao processar o código
