Refactor the code for Open Source Release version 2.3.0

--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
@@ -50,7 +50,7 @@ common-button-misc-submit=Submit
 common-label-misc-learn-more=Learn more
 common-label-account-setup-privacy-policy=The %s Mobile Connect Privacy Promise %s means that your mobile number won't be shared and no personal information will be disclosed without your consent. See our full privacy policy here
 common-label-account-setup-privacy-policy-link-pph=privacy policy here
-common-label-security-heading=Now, let\u2019s make your account secure
+common-label-security-heading=Now, let's make your account secure
 common-label-security-intro=Create a PIN for secure log-in and two questions we can ask you in case you ever forget your PIN.
 common-label-security-terms-policy=By setting up an account, you are agreeing to the %sTerms and Conditions%s.
 common-label-security-terms-conditions=Terms and Conditions
