--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
@@ -94,7 +94,10 @@ sms-label-authenticator-success=You are successfully authenticated via mobile co
 ####waiting.jsp
 waiting-label-continue-on-device-heading=We\u0027ve sent a message to your mobile
 waiting-label-continue-on-saa_device=We\u0027ve sent a notification to your mobile
+waiting-label-continue-on-device-intro-default=Reply to the message from Mobile Connect to complete login.
 waiting-label-continue-on-device-intro-sms=Click on the link in SMS from Mobile Connect to complete login.
+waiting-label-continue-on-device-intro-ussd=Reply with 1 to continue with your Login.
+waiting-label-continue-on-device-intro-ussd-pin=Please enter your 4-digit Mobile Connect PIN to continue with your Login.
 waiting-label-continue-on-device-intro-otp-sms=Click on the link in SMS from Mobile Connect to complete login, Or Enter the OTP sent via SMS
 waiting-label-continue-on-device-intro-saa=Please authenticate from your mobile phone
 waiting-label-continue-on-device-otp-invalid=Please provide a valid OTP
