[IDSDEV-1055] Back Channel API Consent management Implementation

--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources.properties
@@ -90,6 +90,7 @@ register-label-prompt-request=Looks like you don't yet have an account. Want to 
 sms-label-authenticator=SMS Authenticator
 sms-label-authenticator-fail=Your session expired.
 sms-label-authenticator-success=You are successfully authenticated via mobile connect.
+sms-label-authenticator-rejected=Authentication failed
 
 ####waiting.jsp
 waiting-label-continue-on-device-heading=We\u0027ve sent a message to your mobile
