--- a/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_plaintext.properties
+++ b/components/authentication-endpoint/src/main/resources/org/wso2/carbon/identity/application/authentication/endpoint/i18n/Resources_plaintext.properties
@@ -89,6 +89,7 @@ register-label-prompt-request=Looks like you don't yet have an account. Want to 
 ####sms_auth.jsp
 sms-label-authenticator=SMS Authenticator
 sms-label-authenticator-fail=Your session expired.
+sms-label-authenticator-rejected=Authentication failed
 sms-label-authenticator-success=You are successfully authenticated via mobile connect.
 
 ####waiting.jsp
